--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ app.*.map.json
 windows/flutter/generated_plugin_registrant.cc
 windows/flutter/generated_plugin_registrant.h
 windows/flutter/generated_plugins.cmake
+
+.fvm
