--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hultergard.ranker">
+    package="com.hultergard.ranker.ranker">
    <application
         android:label="ranker"
         android:name="${applicationName}"
