--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,11 @@ dependencies:
   firebase_auth: ^4.2.1
   firebase_ui_auth: ^1.1.3
   firebase_ui_oauth_google: ^1.0.10
+  cloud_firestore_odm: ^1.0.0-dev.44
+  json_annotation: ^4.7.0
+  cloud_firestore: ^4.3.0
+  file_picker: ^5.2.4
+  csv: ^5.0.1
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +28,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   stacked_generator: ^0.8.1
   build_runner: ^2.3.3
+  cloud_firestore_odm_generator: ^1.0.0-dev.44
+  json_serializable: ^6.5.4
 
 flutter:
   uses-material-design: true
